--- a/fuckericandtina.html
+++ b/fuckericandtina.html
@@ -61,7 +61,7 @@
         }
 
         function openMultipleTabs() {
-            window.open('http://example.com', '_blank');
+            window.open('https://', '_blank');
             window.open('http://example.com', '_blank');
             window.open('http://example.com', '_blank');
         }
